--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clear": "rimraf dist",
     "build:server": "webpack --config build/webpack.config.server.js",
     "build:client": "webpack --config build/webpack.config.client.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "build": "npm run clear && npm run build:server && npm run build:client",
     "start": "node server/server.js"
   },
@@ -26,7 +27,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.1.4",
     "react-dom": "^16.2.0",
-    "rimraf": "^2.6.2"
+    "react-hot-loader": "^3.1.3",
+    "rimraf": "^2.6.2",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^2.9.7"
   }
 }
