--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.6",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "reactjs": "^1.0.0"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "axios": "^0.18.0",
@@ -33,8 +32,9 @@
     "http-proxy-middleware": "^0.18.0",
     "memory-fs": "^0.4.1",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",    
+    "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
+    "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^2.9.7"
   }
