--- a/package.json
+++ b/package.json
@@ -18,24 +18,40 @@
   "dependencies": {
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.6",
+    "npm": "^6.0.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "to": "^0.2.9",
+    "react-hot-loader": "^4.0.0",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-standard": "^3.1.0",
     "http-proxy-middleware": "^0.18.0",
     "memory-fs": "^0.4.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
