--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,24 @@
 {
-    "presets":[
-        ["es2015",{ "loose": true }],
-        "react"
-
+  "presets": [
+    [
+      "es2015",
+      {
+        "loose": true
+      }
     ],
-    "plugins": ["react-hot-loader/babel"]
+    "react"
+  ],
+  "plugins": [
+    [
+      "react-hot-loader/babel"
+    ],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
+    ] // `style: true` 会加载 less 文件
+  ]
 }
