--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.6.4",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.6",
     "npm": "^6.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "to": "^0.2.9",
-    "react-hot-loader": "^4.0.0",
     "update": "^0.7.4"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
@@ -46,7 +48,10 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-standard": "^3.1.0",
     "http-proxy-middleware": "^0.18.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "memory-fs": "^0.4.1",
+    "postcss-pxtorem": "^4.0.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
