--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,53 @@
 {
-  "parser": "babel-eslint",
-  "extends": "airbnb",
   "env": {
     "browser": true,
-    "es6": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
+  "plugins": [
+    "react"
+  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+  "extends": "airbnb-base/legacy",
   "rules": {
-    "semi": [
-      0
-    ],
-    "react/jsx-filename-extension": [
+    "no-unused-expressions": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "allowShortCircuit": true
       }
-    ]
+    ],
+    "no-empty": [
+      2,
+      {
+        "allowEmptyCatch": true
+      }
+    ],
+    "default-case": 0,
+    "no-case-declarations": 0,
+    "no-script-url": 0,
+    "semi": 0,
+    "eol-last": 0,
+    "no-unused-vars": 1,
+    "global-require": 0,
+    "react/jsx-uses-vars": 2,
+    "import/no-unresolved": 0,
+    "no-unneeded-ternary": 1,
+    "no-nested-ternary": 1,
+    "max-len": [
+      2,
+      150
+    ],
+    "no-return-assign": 0,
+    "dot-notation": 1,
+    "no-param-reassign": 1,
+    "func-names": 1
   }
 }
