--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rimraf dist",
-    "build:server": "webpack --config build/webpack.config.server.js",
-    "build:client": "webpack --config build/webpack.config.client.js",
+    "build:server": "webpack --mode production --config build/webpack.config.server.js",
+    "build:client": "webpack --mode development --config build/webpack.config.client.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "build": "npm run clear && npm run build:server && npm run build:client",
     "dev:server": "cross-env NODE_ENV=development node server/server.js",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "b": "babel-node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,11 +26,14 @@
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "memory-fs": "^0.4.1",
     "to": "^0.2.9",
-    "update": "^0.7.4"
+    "http-proxy-middleware": "^0.18.0",
+    "webpack": "^4.1.1",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -41,13 +45,13 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-standard": "^3.1.0",
-    "http-proxy-middleware": "^0.18.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "memory-fs": "^0.4.1",
@@ -55,8 +59,8 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
-    "webpack": "^4.1.1",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   }
 }
