--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clear": "rimraf dist",
     "build:server": "webpack --config build/webpack.config.server.js",
     "build:client": "webpack --config build/webpack.config.client.js",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:client": "npm run clear && cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "build": "npm run clear && npm run build:server && npm run build:client",
     "dev:server": "cross-env NODE_ENV=development node server/server.js",
     "start": "node server/server.js"
