--- a/package.json
+++ b/package.json
@@ -16,26 +16,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.0.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.6",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.3.1",
+    "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.4",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "http-proxy-middleware": "^0.18.0",
     "memory-fs": "^0.4.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
