--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "presets":[
         ["es2015",{ "loose": true }],
+        "stage-2",
         "react"
     ],
-    "plugins": ["react-hot-loader/babel"]
+    "plugins": ["transform-decorators-legacy","react-hot-loader/babel"]
 }
