--- a/package.json
+++ b/package.json
@@ -16,12 +16,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-stage-2": "^6.24.1",
+    "classnames": "^2.2.5",
     "eslint": "^5.0.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.6",
+    "humps": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "normalizr": "^3.2.4",
+    "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.5.2",
+    "redux-actions": "^2.4.0",
+    "redux-thunk": "^2.3.0",
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
